--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,78 @@
+*{
+    box-sizing: border-box;
+    margin: auto;
+    font-family: URW Chancery L, cursive;
+    
+}
+body {
+    background-image: url(https://www.thebearskinlodge.com/wp-content/uploads/2020/04/sunset-smokies.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    min-height: auto;
+}
+header {
+    height: 100px;
+}
 h1 {
-    color: brown;
+    text-align: center;
+    font-family: URW Chancery L, cursive;
+    font-size: 100px;
+    margin: auto;
+    padding-bottom: 25px;
+}
+h2 {
+    text-align: center;
+    padding-top: 15px;
+    margin: auto;
+
+}
+.Form_container {
+width: 125;
+margin: auto;
+text-align: center;
+
+/* .Form{
+    border: 20px solid  #79bbff;
+    overflow: auto;
+    border-radius: 20px;
+} */
+}
+.btn {
+    box-shadow: 3px 4px 0px 0px #1564ad;
+    background: linear-gradient(to bottom, #79bbff 5%, #378de5 100%);
+    background-color: #79bbff;
+    border-radius: 15px;
+    border: 1px solid #337bc4;
+    display: inline-block;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Arial;
+    font-size: 17px;
+    padding: 7px 25px;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px #528ecc;
+}
+
+.btn:hover {
+    background: linear-gradient(to bottom, #378de5 5%, #79bbff 100%);
+    background-color: #378de5;
+}
+
+.btn:active {
+    position: relative;
+    top: 1px;
+}
+.box {
+    border-radius: 20px;
+    background-color: orange;
+}
+.getdate {
+    border-radius: 20px;
+    background-color: orange;
+}
+.name {
+    border-radius: 20px;
+    background-color: orange;
 }
