--- a/public/main.css
+++ b/public/main.css
@@ -1,58 +1,62 @@
-*{
+* {
     box-sizing: border-box;
     margin: auto;
     font-family: URW Chancery L, cursive;
-    
+
 }
+
 body {
     background-image: url(https://www.thebearskinlodge.com/wp-content/uploads/2020/04/sunset-smokies.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
-    flex-direction: column;
-    min-height: auto;
+    margin: 0;
 }
-header {
-    height: 100px;
-}
+
 h1 {
     text-align: center;
     font-family: URW Chancery L, cursive;
-    font-size: 100px;
+    font-size: 70px;
     margin: auto;
     padding-bottom: 25px;
 }
+
 h2 {
     text-align: center;
-    padding-top: 15px;
+    padding-top: 17.5px;
     margin: auto;
-
 }
+
+h3 {
+    text-align: center;
+    padding-top: 17.5px;
+    margin: auto;
+}
+
 .Form_container {
-width: 125;
-margin: auto;
-text-align: center;
+    width: 125;
+    margin: auto;
+    text-align: center;
 
-/* .Form{
-    border: 20px solid  #79bbff;
-    overflow: auto;
-    border-radius: 20px;
-} */
+
 }
+
 .btn {
     box-shadow: 3px 4px 0px 0px #1564ad;
     background: linear-gradient(to bottom, #79bbff 5%, #378de5 100%);
     background-color: #79bbff;
-    border-radius: 15px;
+    border-radius: 10px;
     border: 1px solid #337bc4;
     display: inline-block;
     cursor: pointer;
     color: #ffffff;
     font-family: Arial;
-    font-size: 17px;
+    font-size: 10px;
     padding: 7px 25px;
     text-decoration: none;
-    text-shadow: 0px 1px 0px #528ecc;
+    text-shadow: 0px 1px 0px #cc8952;
+    cursor: pointer;
+
 }
 
 .btn:hover {
@@ -64,15 +68,40 @@ text-align: center;
     position: relative;
     top: 1px;
 }
+
 .box {
     border-radius: 20px;
     background-color: orange;
+    font-size: 1.25rem;
 }
+
+.goals {
+    width: 500px;
+    height: 45px;
+    border-radius: 20px;
+    background-color: orange;
+    display: flex;
+    flex-wrap: nowrap;
+    font-size: 1rem;
+    overflow-wrap: break-word;
+
+}
+
+div.content {
+    display: flex;
+    flex-wrap: wrap;
+
+
+}
+
 .getdate {
     border-radius: 20px;
     background-color: orange;
+    font-size: 1.25rem;
 }
+
 .name {
     border-radius: 20px;
     background-color: orange;
+    font-size: 1.25rem;
 }
